fix spacing

--- a/sites/all/themes/fos/css/fos.css
+++ b/sites/all/themes/fos/css/fos.css
@@ -8488,42 +8488,41 @@ iframe {
 .node-quotation .body {
   margin: 1rem 0px; }
 
-/* line 209, scss/content/nodes.scss */
-.node-newsletter .body {
-  padding-bottom: 2rem; }
+/* line 210, scss/content/nodes.scss */
+.node-newsletter .view-newsletters {
+  margin-top: 2rem; }
+  /* line 212, scss/content/nodes.scss */
+  .node-newsletter .view-newsletters .views-row {
+    padding-top: 2rem;
+    margin-bottom: 2rem;
+    border-top: 1px solid #999; }
+    /* line 215, scss/content/nodes.scss */
+    .node-newsletter .view-newsletters .views-row .views-field-title {
+      font-size: 1.4rem; }
+    /* line 218, scss/content/nodes.scss */
+    .node-newsletter .view-newsletters .views-row .views-field-field-author,
+    .node-newsletter .view-newsletters .views-row .views-field-field-source {
+      font-size: .9rem;
+      font-style: italic; }
+    /* line 223, scss/content/nodes.scss */
+    .node-newsletter .view-newsletters .views-row .views-field-body {
+      margin-top: .5rem; }
+    /* line 227, scss/content/nodes.scss */
+    .node-newsletter .view-newsletters .views-row .views-field-field-tags a {
+      display: inline-block;
+      padding: .8rem;
+      margin: .5rem 0px;
+      background: #d85342;
+      color: #fff !important;
+      border-bottom: none !important;
+      border-radius: 3px;
+      font-size: .9rem;
+      font-family: "Montserrat", Tahoma, Geneva, sans-serif;
+      text-shadow: 1px 1px 3px rgba(102, 102, 102, 0.3);
+      font-size: .5rem;
+      padding: .5rem; }
 
-/* line 214, scss/content/nodes.scss */
-.node-newsletter .view-newsletters .views-row {
-  padding-top: 2rem;
-  margin-bottom: 2rem;
-  border-top: 1px solid #999; }
-  /* line 217, scss/content/nodes.scss */
-  .node-newsletter .view-newsletters .views-row .views-field-title {
-    font-size: 1.4rem; }
-  /* line 220, scss/content/nodes.scss */
-  .node-newsletter .view-newsletters .views-row .views-field-field-author,
-  .node-newsletter .view-newsletters .views-row .views-field-field-source {
-    font-size: .9rem;
-    font-style: italic; }
-  /* line 225, scss/content/nodes.scss */
-  .node-newsletter .view-newsletters .views-row .views-field-body {
-    margin-top: .5rem; }
-  /* line 229, scss/content/nodes.scss */
-  .node-newsletter .view-newsletters .views-row .views-field-field-tags a {
-    display: inline-block;
-    padding: .8rem;
-    margin: .5rem 0px;
-    background: #d85342;
-    color: #fff !important;
-    border-bottom: none !important;
-    border-radius: 3px;
-    font-size: .9rem;
-    font-family: "Montserrat", Tahoma, Geneva, sans-serif;
-    text-shadow: 1px 1px 3px rgba(102, 102, 102, 0.3);
-    font-size: .5rem;
-    padding: .5rem; }
-
-/* line 243, scss/content/nodes.scss */
+/* line 241, scss/content/nodes.scss */
 .node-blog ul.links li, .node-blog ul.links {
   margin: 0px;
   padding: 0px;
@@ -8531,10 +8530,10 @@ iframe {
   list-style-type: none;
   list-style-image: none; }
 
-/* line 250, scss/content/nodes.scss */
+/* line 248, scss/content/nodes.scss */
 .node-blog ul.links li {
   margin-right: 1rem; }
-  /* line 252, scss/content/nodes.scss */
+  /* line 250, scss/content/nodes.scss */
   .node-blog ul.links li a {
     display: inline-block;
     padding: .8rem;
