--- a/sites/all/themes/fos/scss/content/nodes.scss
+++ b/sites/all/themes/fos/scss/content/nodes.scss
@@ -206,11 +206,9 @@ iframe {
 
 //NEWSLETTER NODES
 .node-newsletter {
-    .body {
-        padding-bottom: 2rem;
-    }
     //quotes embedded on newsletters
     .view-newsletters {
+        margin-top: 2rem;
         .views-row {
             @include views-row-divider;
 
